@@ -1,14 +1,15 @@
 package com.kenzie.capstone.service.client;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.kenzie.capstone.service.model.GetPlantDetailsResponse;
 import com.kenzie.capstone.service.model.GetPlantListResponse;
 
-import java.util.Collections;
 import java.util.List;
 
 public class PlantListLambdaServiceClient {
 
-    private static final String GET_PLANT_LIST_ENDPOINT = "/plants/{plantName}";
+    private static final String GET_PLANT_LIST_ENDPOINT = "plants/{plantName}";
+    private static final String GET_PLANT_DETAILS_ENDPOINT ="details/{id}";
 
     private ObjectMapper mapper;
 
@@ -23,13 +24,29 @@ public class PlantListLambdaServiceClient {
         List<GetPlantListResponse> responseList;
 
         try {
-            responseList = Collections.singletonList(mapper.readValue(response, GetPlantListResponse.class));
+            responseList = List.of(mapper.readValue(response, GetPlantListResponse[].class));
 
         } catch (Exception e) {
             throw new ApiGatewayException("Unable to map deserialize JSON: " + e);
         }
 
         return responseList;
+    }
+
+    public GetPlantDetailsResponse getPlantDetails(String id) {
+        EndpointUtility endpointUtility = new EndpointUtility();
+        String handlerResponse = endpointUtility.getEndpoint(GET_PLANT_DETAILS_ENDPOINT.replace("{id}", id));
+
+        GetPlantDetailsResponse response;
+
+        try {
+            response = mapper.readValue(handlerResponse, GetPlantDetailsResponse.class);
+
+        } catch (Exception e) {
+            throw new ApiGatewayException("Unable to map deserialize JSON: " + e);
+        }
+
+        return response;
     }
 
 
